--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,8 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "fstream": "cpp",
+        "sstream": "cpp"
     }
 }
